--- a/lang/hi.json
+++ b/lang/hi.json
@@ -1,4 +1,3 @@
 {
-    "first_string": "स्वागत हे",
-    "second_string": "If this tutorial helps you, give it a like and subscribe to Reso Coder 😉"
+    "welcome": "स्वागत हे"
   }
