--- a/lang/en.json
+++ b/lang/en.json
@@ -1,4 +1,6 @@
 {
-    "first_string": "Hello! This is the first message.",
-    "second_string": "If this tutorial helps you, give it a like and subscribe to Reso Coder 😉"
+    "welcome": "Welcome !",
+    "Home":"Home",
+    "Map":"Map",
+    "Applications":"Applications"
   }
