--- a/lang/hi.json
+++ b/lang/hi.json
@@ -1,3 +1,11 @@
 {
-    "welcome": "स्वागत हे"
-  }
+    "welcome": "स्वागत हे",
+    "Home":"होम",
+    "Map":"नक्शा",
+    "Applications":"ऍप्लिकेशन्स",
+    "Company name": "कंपनी नाम",
+    "Employer name": "एम्प्लायर नाम",
+    "Place": "जगह",
+    "Need": "आवश्यकता",
+    "plumber": "प्लम्बर",
+}
