--- a/lang/en.json
+++ b/lang/en.json
@@ -7,5 +7,5 @@
     "Employer name": "Employer name",
     "Place": "Place",
     "Need": "Need",
-    "plumber": "Plumber",
+    "plumber": "Plumber"
   }
