--- a/lang/hi.json
+++ b/lang/hi.json
@@ -7,5 +7,5 @@
     "Employer name": "एम्प्लायर नाम",
     "Place": "जगह",
     "Need": "आवश्यकता",
-    "plumber": "प्लम्बर",
+    "plumber": "प्लम्बर"
 }
