--- a/lang/en.json
+++ b/lang/en.json
@@ -8,4 +8,16 @@
     "Place": "Place",
     "Need": "Need",
     "plumber": "Plumber",
+    "About": "About",
+    "Skills required": "Skills required",
+    "Random": "Random",
+    "Skills": "Skills",
+    "to": "to",
+    "be": "be",
+    "put in here": "put in here",
+    "Wages/Salary": "Wages/Salary",
+    "Deets": "Deets",
+    "Photos": "Photos",
+    "See all": "See all",
+    "all photos come here in a Carousel": "all photos come here in a Carousel"
   }
