--- a/lang/hi.json
+++ b/lang/hi.json
@@ -8,4 +8,16 @@
     "Place": "जगह",
     "Need": "आवश्यकता",
     "plumber": "प्लम्बर",
+    "About": "के बारे में",
+    "Skills required": "कौशल अपेक्षित",
+    "Random": "अनियमित",
+    "Skills": "कौशल",
+    "to": "के",
+    "be": "लिये",
+    "put in here": "यहाँ डाल दीजिये",
+    "Wages/Salary": "वेतन",
+    "Deets": "विस्तृत जानकारी",
+    "Photos": "तस्वीरें",
+    "See all": "सभी देखें",
+    "all photos come here in a Carousel": "सभी तस्वीरें यहाँ एक हिंडोला में आती हैं"
 }
