Hola vaish here

--- a/lang/en.json
+++ b/lang/en.json
@@ -19,5 +19,13 @@
     "Deets": "Deets",
     "Photos": "Photos",
     "See all": "See all",
-    "all photos come here in a Carousel": "all photos come here in a Carousel"
-  }
+    "all photos come here in a Carousel": "all photos come here in a Carousel",
+    "History": "History",
+    "Mangalore": "Mangalore",
+    "Change": "Change",
+    "Company Name": "Company Name",
+    "Employer Name": "Employer Name",
+    "Details": "Details",
+    "Contact": "Contact",
+    "Location": "Location"
+}
