--- a/lang/hi.json
+++ b/lang/hi.json
@@ -34,5 +34,11 @@
     "Place": "स्थान",
     "Search": "खोज",
     "Employers": "काम देने वाले",
-
+    "Hey there,": "नमस्ते,",
+    "Enter your credentials": "अपनी साख दर्ज करें",
+    "Enter your phone number": "अपना दूरभाष क्रमांक दर्ज करें",
+    "Enter OTP": "OTP दर्ज कीजिये",
+    "Login": "लॉग इन करें",
+    "Verify": "सत्यापित करें",
+    "Enter the valid phone number": "मान्य फोन नंबर दर्ज करें"
 }
