--- a/lang/en.json
+++ b/lang/en.json
@@ -32,6 +32,12 @@
     "Contract term:": "Contract term:",
     "months": "months",
     "Search": "Search",
-    "Employers": "Employers"
-
+    "Employers": "Employers",
+    "Hey there,": "Hey\nthere,",
+    "Enter your credentials": "Enter your credentials",
+    "Enter your phone number": "Enter your phone number",
+    "Enter the OTP": "Enter the OTP",
+    "Login": "Login",
+    "Verify": "Verify",
+    "Enter the valid phone number": "Enter the valid phone number"
 }
