--- a/lang/hi.json
+++ b/lang/hi.json
@@ -32,5 +32,12 @@
     "Contract term:": "कॉन्ट्रैक्ट की अवधि : ",
     "months":"महीने",
     "Search": "खोज",
-    "Employers": "काम देने वाले"
+    "Employers": "काम देने वाले",
+    "Hey there,": "नमस्ते,",
+    "Enter your credentials": "अपनी साख दर्ज करें",
+    "Enter your phone number": "अपना दूरभाष क्रमांक दर्ज करें",
+    "Enter OTP": "OTP दर्ज कीजिये",
+    "Login": "लॉग इन करें",
+    "Verify": "सत्यापित करें",
+    "Enter the valid phone number": "मान्य फोन नंबर दर्ज करें"
 }
