--- a/lang/en.json
+++ b/lang/en.json
@@ -5,8 +5,8 @@
     "Applications":"Applications",
     "Company name": "Company name",
     "Employer name": "Employer name",
-    "Place": "Place",
-    "Need": "Need",
+    "Place": "View on map",
+    "Need": "Job-Title",
     "plumber": "Plumber",
     "About": "About",
     "Skills required": "Skills required",
